tests/baselines/reference/parserParameterList2.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList2.ts(2,5): error TS1015: Parameter cannot have question mark and initializer.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList2.ts (1 errors) ====
    class C {
      F(A?= 0) { }
        ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    }